[gd_scene load_steps=8 format=2]

[ext_resource path="res://Board.gd" type="Script" id=1]
[ext_resource path="res://Neon.material" type="Material" id=2]

[sub_resource type="SpatialMaterial" id=1]
flags_transparent = true
albedo_color = Color( 0.243137, 0.717647, 0.686275, 1 )
emission_enabled = true
emission = Color( 0, 1, 1, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="ParticlesMaterial" id=2]
emission_shape = 1
emission_sphere_radius = 1.0
angular_velocity = 6.44597e-44

[sub_resource type="SphereMesh" id=3]
material = ExtResource( 2 )
radius = 0.05
height = 0.1

[sub_resource type="ProceduralSky" id=4]
sky_top_color = Color( 0.568627, 0.392157, 1, 1 )
sky_horizon_color = Color( 0.690196, 0.317647, 0.945098, 1 )
ground_bottom_color = Color( 0.0705882, 0.0588235, 0.192157, 1 )
ground_horizon_color = Color( 0.419608, 0.290196, 0.886275, 1 )

[sub_resource type="Environment" id=5]
background_mode = 2
background_sky = SubResource( 4 )
background_color = Color( 0.0745098, 0.0627451, 0.219608, 1 )
glow_enabled = true
glow_bicubic_upscale = true

[node name="Board" type="Spatial"]
script = ExtResource( 1 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 9 )

[node name="CSGCombiner" type="CSGCombiner" parent="."]
transform = Transform( 1.2, 0, 0, 0, 1.2, 0, 0, 0, 1.2, 0, 0, 0 )

[node name="CSGBox" type="CSGBox" parent="CSGCombiner"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, 0 )
width = 0.1
height = 6.0
depth = 0.1
material = SubResource( 1 )

[node name="CSGBox4" type="CSGBox" parent="CSGCombiner"]
transform = Transform( -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 4.37114e-08, 1, 0 )
width = 0.1
height = 6.0
depth = 0.1
material = SubResource( 1 )

[node name="CSGBox2" type="CSGBox" parent="CSGCombiner"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 0 )
width = 0.1
height = 6.0
depth = 0.1
material = SubResource( 1 )

[node name="CSGBox3" type="CSGBox" parent="CSGCombiner"]
transform = Transform( -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, -4.37114e-08, -1, 0 )
width = 0.1
height = 6.0
depth = 0.1
material = SubResource( 1 )

[node name="Particles" type="Particles" parent="."]
emitting = false
amount = 50
one_shot = true
explosiveness = 0.27
process_material = SubResource( 2 )
draw_pass_1 = SubResource( 3 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 5 )

[node name="StateLabel" type="Label" parent="."]
margin_right = 89.0
margin_bottom = 15.0
rect_scale = Vector2( 5, 5 )
text = "Test"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RetryButton" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 18.0
margin_top = -127.0
margin_right = 66.0
margin_bottom = -107.0
rect_scale = Vector2( 5, 5 )
text = "Reset"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="RetryButton" to="." method="_on_RetryButton_pressed"]
